refactor [editor]: sticky lines test
GitOrigin-RevId: 7cdd63b692cd0e09336b6b0c3b7d9119c08b341c